--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 PyPDF2==3.0.1
-groq==0.4.2
+groq==0.4.0
 python-dotenv==1.0.0
 edge-tts
-aiofiles==23.2.1
 pydantic==2.5.0
-httpx==0.27.0
-pycryptodome
+aiofiles==23.2.1
+
+# For Vision API (image processing)
+pdf2image==1.16.3
+Pillow==10.1.0
