--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-PyPDF2==3.0.1
-groq==0.4.0
-python-dotenv==1.0.0
-edge-tts
-pydantic==2.5.0
+fastapi==0.110.0
+uvicorn[standard]==0.27.1
+python-multipart==0.0.9
+pydantic==2.6.1
+python-dotenv==1.0.1
 aiofiles==23.2.1
 
-# For Vision API (image processing)
-pdf2image==1.16.3
-Pillow==10.1.0
+# PDF
+PyMuPDF==1.23.26
+PyPDF2==3.0.1
+pdf2image==1.17.0
+Pillow==10.2.0
+
+# AI
+groq==0.9.0
+httpx==0.27.0   # 🔥 IMPORTANT (prevents proxy error)
+
+# TTS
+edge-tts
