--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
-fastapi==0.110.0
-uvicorn[standard]==0.27.1
-python-multipart==0.0.9
-pydantic==2.6.1
-python-dotenv==1.0.1
-aiofiles==23.2.1
-
-# PDF
-PyMuPDF==1.23.26
-PyPDF2==3.0.1
-pdf2image==1.17.0
-Pillow==10.2.0
-
-# AI
-groq==0.9.0
-httpx==0.27.0   # 🔥 IMPORTANT (prevents proxy error)
-
-# TTS
+fastapi
+uvicorn[standard]
+python-multipart
+PyPDF2
+pdfplumber
+pytesseract
+pdf2image
+Pillow
+groq
+python-dotenv
 edge-tts
+aiofiles
+pydantic
+httpx
+pycryptodome
